welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
	if (c>b) {
		if (bOk) return true 
		else if b>a return true
	}
	return false
}